tests/baselines/reference/computedPropertyNames37_ES6.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames37_ES6.ts(9,9): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames37_ES6.ts (1 errors) ====
    class Foo { x }
    class Foo2 { x; y }
    
    class C {
        [s: number]: Foo2;
    
        // Computed properties
        get ["get1"]() { return new Foo }
        set ["set1"](p: Foo2) { }
            ~~~~~~~~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
    }